<resources>
    <string name="app_name">Farmakokinetika</string>
    <string name="amount_hint">Amount(mg)</string>
    <string name="button_text">Result</string>
    <string name="action_settings">Settings</string>

    <string name="defult_cas_size" translatable="false">7</string>
    <string name="key_cas_size" translatable="false">key_cas</string>
    <string name="title_cas_size" translatable="false">Totálny Čas (dní)</string>

    <string name="key_period_size" translatable="false">key_period</string>
    <string name="title_period_size" translatable="false">Perioda Podavania</string>
    <string name="image">image</string>
    <string name="pref_label_4">4H</string>
    <string name="pref_label_8">8H</string>
    <string name="pref_label_12">12H</string>

    <string name="pref_value_4">4</string>
    <string name="pref_value_8">8</string>
    <string name="pref_value_12">12</string>

    <string name="note3">Výsledok:</string>
    <string name="res">Učinna Koncentrácia</string>
    <string name="min_time_res">Minimalný Čas</string>

    <string name="nazov">Farmakokinetika účinka lieka pri zadaných podmienkach</string>
    <string name="note" translatable="false">Zadajte množstvo lieku v milligramach (mg):</string>
    <string name="note2">Gráf účinku lieka:</string>

    <string name="main_notification_channel_name">Channel</string>
    <string name="charging_reminder_notification_title">Už ste mali dávku?</string>
    <string name="charging_reminder_notification_body">Teraz je dobrý čas, aby podať liek do organizmu!</string>

</resources>
