<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title1"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:text="@string/nazov"
        android:textSize="22sp"/>
    <ImageView
        android:id="@+id/image_1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/embleme"
        android:contentDescription="@string/image"
        android:scaleType="centerInside"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note"
        android:text="@string/note"
        android:paddingTop="16dp"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/drug_amount"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:inputType="number"
        android:maxLength="4"
        android:layout_marginTop="16dp"
        android:paddingTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Button
        android:id="@+id/do_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:onClick="generateDetailActivity"
        android:text="@string/button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />

</LinearLayout>
</ScrollView>